--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@types/node": "18.8.2",
+    "@types/node": "^18.8.2",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "typescript": "^4.8.4"
   }
 }
